# sfm-reconstruction-priors

./: .gitignore  .gitmodules  Makefile  README.md  environment.yaml  pyproject.toml
configs/: get_dust3r_predictions.yaml  preprocess_data.yaml  sfm.yaml  sfm_colmap.yaml  sfm_vggt.yaml
configs/callbacks/: device_stats_monitor.yaml
configs/cost/: ba.yaml  ba_scale.yaml  combined.yaml  combined_cauchy.yaml  combined_similar_scale.yaml  combined_similar_scale_cauchy.yaml  combined_similar_scale_conf.yaml  dust3r.yaml  joint_nic.yaml
configs/data/: default.yaml  hyperloop.yaml  precompute.yaml  scannetpp.yaml  scannetppv2.yaml  scene_debug.yaml  v2_10scenes_2.yaml  v2_20scenes.yaml  v2_30scenes.yaml  v2_30scenes_pt1.yaml  v2_30scenes_pt2.yaml  v2_30scenes_pt3.yaml  v2_3scenes.yaml  v2_50scenes.yaml  v2_5scenes.yaml  v2_5scenes_2.yaml  v2_scenes_viz.yaml  v2_single.yaml
configs/debug/: advanced_profiler.yaml  default.yaml  overfit.yaml  residual_analysis.yaml  simple_profiler.yaml
configs/extras/: default.yaml
configs/hparams/: mast3r.yaml  spsg.yaml
configs/linear_solvers/: conjugate_gradient.yaml  sparse_conjugate_gradient.yaml  torch_linear.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: dust3r_224.yaml  dust3r_512_dpt.yaml  dust3r_512_linear.yaml  mast3r.yaml  mast3r_sfm.yaml  vggt.yaml  vggt_mv.yaml
configs/optimizer/: adam.yaml  gd.yaml  gn.yaml  lm.yaml
configs/paths/: default.yaml
configs/visualizer/: rerun.yaml
docs/: index.html
scripts/: precompute_matches.sh
scripts/ablation_energy/: plus_p2p.sh  plus_p2p_inliers.sh  plus_p2p_inliers_conf.sh  run_all.sh
scripts/ablation_prior/: vggt.sh  (+3 more)
src/: mask_colmap_data.py  precompute_matches.py  sfm_colmap.py  sfm_dust3r_go.py  sfm_vggt.py  structure_from_motion.py
(+60 files in other folders)
